syntax = "proto3";

option go_package = ".;pb";
option java_multiple_files = true;
option java_package = "com.aapanavyapar.aapanavyapar.services";


message ResponseData{
  string token = 1;
  string refreshToken = 2;

}

enum ProblemCode {
  NoUserNameIsProvided = 0;
  NoPhoneNumberIsProvided = 1;
  NoPasswordIsProvided = 2;
  NoPinCodeIsProvided = 4;
  NoEmailIsProvided = 5;
  UserAlreadyExist = 6;
  UserAlreadyExistWithSameContactNumber = 7;
  InvalidEmailAddress = 8;
  InvalidPasswordLength = 9;
  InvalidPhoneNumber = 10;
  InvalidPinCode = 11;
  UnableToSendOTP = 12;
  InvalidPassword = 13;
  InvalidUserCredentials = 14;
  UserNotExist = 15;
  OTPIsAlreadySent = 16;
  APIKeyNotPresent = 17;
  UserWithSameContactNumberAlreadyInRegistrationProcess = 18;
  InternalProblem = 19;
}

enum OTPResponse{
  NotOk = 0;
  OK = 1;
}

enum Category{
  SPORTS_AND_FITNESS = 0;
  ELECTRIC = 1;
  DEVOTIONAL = 2;
  AGRICULTURAL = 3;
  WOMENS_CLOTHING = 4;
  WOMENS_ACCESSORIES = 5;
  MENS_CLOTHING = 6;
  MENS_ACCESSORIES = 7;
  HOME_GADGETS = 8;
  TOYS = 9;
  ELECTRONIC = 10;
  DECORATION = 11;
  FOOD = 12;
  STATIONERY = 13;
  BAGS = 14;
  HARDWARE = 15;
  FURNITURE = 16;
  PACKAGING_AND_PRINTING = 17;
  BEAUTY_AND_PERSONAL_CARE = 18;
  CHEMICALS = 19;
  GARDEN = 20;
  KITCHEN = 21;
  MACHINERY = 22;
}

enum Ratings {
  VERY_BAD = 0;
  BAD = 1;
  OKAY = 2;
  GOOD = 3;
  VERY_GOOD = 4;

}

enum Status {
  PENDING = 0;
  CANCELED = 1;
  CONFORM = 2;
  DISPATCHED = 3;
  DELIVERED = 4;

}

message Location {
  string Longitude = 3;
  string Latitude = 4;

}

message ShopsNearBy {
  string shopId = 5;
  string shopName = 6;
  string primaryImage = 7;
  repeated Category category = 8;
  float rating = 9;
  string shopkeeper = 10;
  Location location = 11;

}

message ProductsOfShopsNearBy {
  string productId = 12;
  string shopId = 13;
  string productName = 14;
  string primaryImage = 15;
  repeated Category category = 16;
  uint64 likes = 17;
}

message Address {
  string FullName = 18;
  string HouseDetails = 19;
  string StreetDetails = 20;
  string LandMark = 21;
  string PinCode = 22;
  string City = 23;
  string State = 24;
  string Country = 25;
  string PhoneNo = 26;
}

message OperationalHours {
  repeated string Sunday = 27;
  repeated string Monday = 28;
  repeated string Tuesday = 29;
  repeated string Wednesday = 30;
  repeated string Thursday = 31;
  repeated string Friday = 32;
  repeated string Saturday = 33;
}

message RatingOfShop {
  string UserName = 34;
  string Comment = 35;
  Ratings Rating = 36;
  string timestamp = 37;

}